Se agrega desplegable de idioma, se agregan grupos, y se unifica contactos

--- a/views/install/2-loading.html
+++ b/views/install/2-loading.html
@@ -63,12 +63,14 @@
             </div>
             <div class="offcanvas-body">
               <div class="offcanvas-container-top">
+                <!--  Desplegable de Idioma INICIO -->
                 <div class="dropdown">
                   <button
                     type="button"
                     class="btn dropdown-toggle"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
+                    id="dropdownLanguageButton"
                   >
                     <div class="offcanvas-link__text">
                       <span
@@ -77,7 +79,7 @@
                       >
                         language
                       </span>
-                      <span>Español</span>
+                      <span id="dropdownLanguageButtonText">Español</span>
                     </div>
                     <span
                       class="material-symbols-outlined btn-dropdown-icon"
@@ -86,11 +88,28 @@
                       expand_more
                     </span>
                   </button>
-                  <ul class="dropdown-menu">
-                    <li><button class="dropdown-item">English</button></li>
-                    <li><button class="dropdown-item">Deutsch</button></li>
+                  <ul
+                    class="dropdown-menu"
+                    aria-labelledby="dropdownLanguageButton"
+                  >
+                    <li>
+                      <button class="dropdown-item d-none" data-lang="es">
+                        Español
+                      </button>
+                    </li>
+                    <li>
+                      <button class="dropdown-item" data-lang="en">
+                        English
+                      </button>
+                    </li>
+                    <li>
+                      <button class="dropdown-item" data-lang="de">
+                        Deutsch
+                      </button>
+                    </li>
                   </ul>
                 </div>
+                <!--  Desplegable de Idioma FIN -->
               </div>
               <div class="offcanvas-container-bottom">
                 <button class="offcanvas-logout" aria-label="Cerrar sesión">
@@ -128,5 +147,7 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    <!-- Desplegable de Idioma -->
+    <script src="../../js/language.js"></script>
   </body>
 </html>
