--- a/assets/css/_component_form.css
+++ b/assets/css/_component_form.css
@@ -147,7 +147,7 @@
 .suggestions .suggestion-list,
 .suggestions .no-results {
   margin: 0;
-  padding: 0 0.75rem;
+  padding: 0;
   border-radius: 0.5rem;
   border: 1px solid var(--border-primary-color);
   list-style: none;
@@ -158,15 +158,24 @@
 .suggestions .no-results {
   padding: 1rem 0.75rem;
 }
-.suggestions .suggestion-list .suggestion-list__item {
-  padding: 1rem 0;
+.suggestions .suggestion-list .suggestion-list__item button {
+  padding: 1rem 0.75rem;
+  border: none;
+  background-color: transparent;
+  border-radius: 0.5rem;
+  width: 100%;
+  text-align: left;
 }
-.suggestions .suggestion-list .suggestion-list__item:hover {
+.suggestions .suggestion-list .suggestion-list__item button:hover {
   cursor: pointer;
 }
+.suggestions .suggestion-list .suggestion-list__item button:focus {
+  box-shadow: inset 0 0 0 0.125rem var(--btn-primary-color);
+  outline: none;
+}
 @media (min-width: 992px) {
-  .suggestions .suggestion-list .suggestion-list__item {
-    padding: 0.75rem 0;
+  .suggestions .suggestion-list .suggestion-list__item button {
+    padding: 0.75rem;
   }
 }
 .suggestions .suggestion-list .suggestion-list__item:not(:last-child) {
