--- a/assets/css/_component_header.css
+++ b/assets/css/_component_header.css
@@ -156,10 +156,15 @@
   right: 0;
   left: unset;
   padding: 0;
+  border-radius: 0.5rem;
 }
 
 .navbar .offcanvas-body .offcanvas-container-top .dropdown-menu .dropdown-item {
   padding-left: 1.75rem;
+  border-radius: 0.5rem;
+}
+.navbar .offcanvas-body .offcanvas-container-top .dropdown-menu .dropdown-item:active {
+  background-color: var(--btn-primary-color-hover);
 }
 @media screen and (max-width: 992px) {
   .navbar .offcanvas-body .offcanvas-container-top .dropdown-menu {
