--- a/views/sections/3-config-alert.html
+++ b/views/sections/3-config-alert.html
@@ -103,12 +103,14 @@
                     </span>
                   </a>
                   <hr />
+                  <!--  Desplegable de Idioma INICIO -->
                   <div class="dropdown">
                     <button
                       type="button"
                       class="btn dropdown-toggle"
                       data-bs-toggle="dropdown"
                       aria-expanded="false"
+                      id="dropdownLanguageButton"
                     >
                       <div class="offcanvas-link__text">
                         <span
@@ -117,7 +119,7 @@
                         >
                           language
                         </span>
-                        <span>Español</span>
+                        <span id="dropdownLanguageButtonText">Español</span>
                       </div>
                       <span
                         class="material-symbols-outlined btn-dropdown-icon"
@@ -126,11 +128,13 @@
                         expand_more
                       </span>
                     </button>
-                    <ul class="dropdown-menu">
-                      <li><button class="dropdown-item">English</button></li>
-                      <li><button class="dropdown-item">Deutsch</button></li>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownLanguageButton">
+                      <li><button class="dropdown-item d-none" data-lang="es">Español</button></li>
+                      <li><button class="dropdown-item" data-lang="en">English</button></li>
+                      <li><button class="dropdown-item" data-lang="de">Deutsch</button></li>
                     </ul>
                   </div>
+                  <!--  Desplegable de Idioma FIN -->
                 </div>
               </div>
 
@@ -468,7 +472,9 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
-
+    
+    <!-- Desplegable de Idioma -->
+    <script src="../../js/language.js"></script>
     <!-- Toast script -->
      <script src="../../js/toast.js"></script>
   </body>
