--- a/views/contacts/1-contact.html
+++ b/views/contacts/1-contact.html
@@ -259,14 +259,14 @@
                 </div>
 
                 <button
-                    type="button"
-                    class="btn btn-lg btn-primary"
-                    data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasAddContact"
-                    aria-controls="offcanvasAddContact"
-                  >
-                    Agregar contacto
-                  </button>
+                  type="button"
+                  class="btn btn-lg btn-primary"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#offcanvasAddContact"
+                  aria-controls="offcanvasAddContact"
+                >
+                  Agregar contacto
+                </button>
               </div>
               <!-- Contenido fin -->
               <!-- Offcanvas Agregar Contacto -->
@@ -403,6 +403,7 @@
               </span>
             </button>
           </div>
+        </div>
       </section>
     </main>
 
@@ -418,9 +419,7 @@
     ></script>
     <!-- Desplegable de Idioma -->
     <script src="../../js/language.js"></script>
-    <!-- Buscador de Contacto -->
-    <script src="../../js/search-contact.js"></script>
-    <!-- Validación de formulario - Agregar contacto -->
-    <script src="../../js/form-validation-contact-add.js"></script>
+    <!-- Validación de formulario Agregar contacto - Buscador - Toast de éxito  -->
+    <script src="../../js/form-add-contact.js"></script>
   </body>
 </html>
