--- a/views/contacts/2-contacts-actions.html
+++ b/views/contacts/2-contacts-actions.html
@@ -323,12 +323,7 @@
                               >edit</span
                             >
                           </button>
-                          <button
-                            type="button"
-                            class="btn btn-icon"
-                            data-bs-toggle="modal"
-                            data-bs-target="#deleteContactModal"
-                          >
+                          <button type="button" class="btn btn-icon">
                             <span
                               class="material-symbols-outlined text-danger"
                               data-bs-toggle="tooltip"
@@ -360,12 +355,7 @@
                               >edit</span
                             >
                           </button>
-                          <button
-                            type="button"
-                            class="btn btn-icon"
-                            data-bs-toggle="modal"
-                            data-bs-target="#deleteContactModal"
-                          >
+                          <button type="button" class="btn btn-icon">
                             <span
                               class="material-symbols-outlined text-danger"
                               data-bs-toggle="tooltip"
@@ -397,12 +387,7 @@
                               >edit</span
                             >
                           </button>
-                          <button
-                            type="button"
-                            class="btn btn-icon"
-                            data-bs-toggle="modal"
-                            data-bs-target="#deleteContactModal"
-                          >
+                          <button type="button" class="btn btn-icon">
                             <span
                               class="material-symbols-outlined text-danger"
                               data-bs-toggle="tooltip"
@@ -436,12 +421,7 @@
                               >edit</span
                             >
                           </button>
-                          <button
-                            type="button"
-                            class="btn btn-icon"
-                            data-bs-toggle="modal"
-                            data-bs-target="#deleteContactModal"
-                          >
+                          <button type="button" class="btn btn-icon">
                             <span
                               class="material-symbols-outlined text-danger"
                               data-bs-toggle="tooltip"
@@ -824,12 +804,10 @@
     ></script>
     <!-- Desplegable de Idioma -->
     <script src="../../js/language.js"></script>
-    <!-- Buscador -->
-    <script src="../../js/search-contact.js"></script>
-    <!-- Validación de formulario - Agregar -->
-    <script src="../../js/form-validation-contact-add.js"></script>
+    <!-- Validación de formulario Agregar contacto - Buscador - Toast de éxito -->
+    <script src="../../js/form-add-contact.js"></script>
     <!-- Validación de formulario - Editar -->
-    <script src="../../js/form-validation-contact-edit.js"></script>
+    <script src="../../js/form-edit-contact.js"></script>
     <!-- Tooltip -->
     <script src="../../js/tooltip.js"></script>
     <!-- Toast -->
