--- a/views/groups/1-groups.html
+++ b/views/groups/1-groups.html
@@ -249,10 +249,12 @@
 
                 <div>
                   <h2 class="mb-2 h5 fw-normal contacts-subtitle">
-                    Agrega grupos y crea configuraciones de transcripción personalizadas
+                    Agrega grupos y crea configuraciones de transcripción
+                    personalizadas
                   </h2>
                   <p class="mb-0 body-2 text-secondary">
-                    Si quieres tener una configuración diferente puedes agregar grupos y personalizar las transcripciones de cada chat
+                    Si quieres tener una configuración diferente puedes agregar
+                    grupos y personalizar las transcripciones de cada chat
                   </p>
                 </div>
 
@@ -294,9 +296,7 @@
                     <div>
                       <!-- INICIO Buscador de Grupo -->
                       <div class="nameData">
-                        <label
-                          for="groupSearchInput"
-                          class="form-label body-2"
+                        <label for="groupSearchInput" class="form-label body-2"
                           >Nombre del Grupo *
                         </label>
                         <input
@@ -418,9 +418,7 @@
     ></script>
     <!-- Desplegable de Idioma -->
     <script src="../../js/language.js"></script>
-    <!-- Buscador de Grupo -->
-    <script src="../../js/search-group.js"></script>
-    <!-- Validación de formulario - Agregar grupo -->
-    <script src="../../js/form-validation-group-add.js"></script>
+    <!-- Validación de formulario Agregar grupo - Buscador - Toast de éxito  -->
+    <script src="../../js/form-add-group.js"></script>
   </body>
 </html>
