--- a/views/groups/2-groups-actions.html
+++ b/views/groups/2-groups-actions.html
@@ -323,12 +323,7 @@
                               >edit</span
                             >
                           </button>
-                          <button
-                            type="button"
-                            class="btn btn-icon"
-                            data-bs-toggle="modal"
-                            data-bs-target="#deleteGroupModal"
-                          >
+                          <button type="button" class="btn btn-icon">
                             <span
                               class="material-symbols-outlined text-danger"
                               data-bs-toggle="tooltip"
@@ -360,12 +355,7 @@
                               >edit</span
                             >
                           </button>
-                          <button
-                            type="button"
-                            class="btn btn-icon"
-                            data-bs-toggle="modal"
-                            data-bs-target="#deleteGroupModal"
-                          >
+                          <button type="button" class="btn btn-icon">
                             <span
                               class="material-symbols-outlined text-danger"
                               data-bs-toggle="tooltip"
@@ -400,12 +390,7 @@
                               >edit</span
                             >
                           </button>
-                          <button
-                            type="button"
-                            class="btn btn-icon"
-                            data-bs-toggle="modal"
-                            data-bs-target="#deleteGroupModal"
-                          >
+                          <button type="button" class="btn btn-icon">
                             <span
                               class="material-symbols-outlined text-danger"
                               data-bs-toggle="tooltip"
@@ -437,12 +422,7 @@
                               >edit</span
                             >
                           </button>
-                          <button
-                            type="button"
-                            class="btn btn-icon"
-                            data-bs-toggle="modal"
-                            data-bs-target="#deleteGroupModal"
-                          >
+                          <button type="button" class="btn btn-icon">
                             <span
                               class="material-symbols-outlined text-danger"
                               data-bs-toggle="tooltip"
@@ -665,7 +645,9 @@
                         ¿Quieres eliminar la configuración de Familia?
                       </p>
                       <p class="mb-0">
-                        Estás a punto de eliminar la configuración de uno de tus grupos. Para personalizar la configuración de este grupo tendrás que volver a agregarlo al listado
+                        Estás a punto de eliminar la configuración de uno de tus
+                        grupos. Para personalizar la configuración de este grupo
+                        tendrás que volver a agregarlo al listado
                       </p>
                     </div>
                     <div class="modal-footer border-none">
@@ -812,12 +794,10 @@
     ></script>
     <!-- Desplegable de Idioma -->
     <script src="../../js/language.js"></script>
-    <!-- Buscador -->
-    <script src="../../js/search-group.js"></script>
-    <!-- Validación de formulario - Agregar -->
-    <script src="../../js/form-validation-group-add.js"></script>
-    <!-- Validación de formulario - Editar -->
-    <script src="../../js/form-validation-group-edit.js"></script>
+    <!-- Validación de formulario Agregar grupo - Buscador - Toast de éxito -->
+    <script src="../../js/form-add-group.js"></script>
+    <!-- Validación de formulario - Editar grupo -->
+    <script src="../../js/form-edit-group.js"></script>
     <!-- Tooltip -->
     <script src="../../js/tooltip.js"></script>
     <!-- Toast -->
