--- a/assets/css/_install.css
+++ b/assets/css/_install.css
@@ -1,8 +1,11 @@
-/* @media screen and (max-width: 992px) {
-} */
-.install-section {
-  margin: 0;
-  margin-bottom: 1.5rem;
+@media screen and (max-width: 992px) {
+  .install-section {
+    margin: 0;
+  }
+  .install-section__item {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 .nav-sections {
   padding: 1.5rem;
@@ -12,29 +15,36 @@
 .nav-sections ol {
   padding-left: 1rem;
 }
-@media screen and (min-width: 992px) {
+/* .nav-sections ol .item-mobile {
+  display: none;
+} */
+/* @media screen and (min-width: 992px) {
   .nav-sections ol .item-mobile {
     display: list-item;
   }
+} */
+.section-qr {
+  display: flex;
+  justify-content: center;
 }
 @media screen and (min-width: 992px) {
-  .section-qr {
+  .section-qr, .section-authcode {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--white);
     border-radius: 1rem;
     height: 100%;
-
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
   }
 }
 .section-authcode {
   margin-bottom: 1rem;
 }
-/* @media screen and (min-width: 992px) {
-} */
+@media screen and (min-width: 992px) {
+  /* .section-authcode {
+    display: none;
+  } */
+}
 .section-authcode input {
   border: none;
   font-weight: 200;
@@ -46,6 +56,7 @@
   text-align: center;
   min-height: 74px;
 }
+
 .custom-loading-spacer {
   margin-top: 120px;
 }
