--- a/views/install/1-install-qr.html
+++ b/views/install/1-install-qr.html
@@ -130,19 +130,13 @@
 
       <section class="container">
         <div class="row install-section">
-          <div class="col-12 nav-sections">
-             <div class="section-qr">            
+          <div class="col-12 col-lg-6 install-section__item">
+            <div class="section-qr nav-sections mb-3">
               <div id="qrcode"></div>
-            </div> 
-            <div class="text-center">
-              <small>Opción alternativa</small><br>
-              <a href="#">Usar código numérico</a>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 install-section__item">
-            <div class="nav-sections mb-4">
+          <div class="col-12 col-lg-6 install-section__item">
+            <div class="nav-sections mb-3">
               <img src="../../img/android-51.svg" alt="Android" />
               <p class="h6 my-2">Instrucciones para teléfonos Android</p>
               <ol>
@@ -153,8 +147,6 @@
                 <li>Apuntar la cámara al código QR</li>
               </ol>
             </div>
-          </div>
-          <div class="col-lg-6 install-section__item">
             <div class="nav-sections">
               <img src="../../img/iOS.svg" alt="iOS" />
               <p class="h6 my-2">Instrucciones para teléfonos Android</p>
@@ -185,13 +177,13 @@
     <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 
     <script>
-      const qrcode = new QRCode(document.getElementById('qrcode'), {
-        text: 'http://jindo.dev.naver.com/collie',
+      const qrcode = new QRCode(document.getElementById("qrcode"), {
+        text: "http://jindo.dev.naver.com/collie",
         width: 180,
         height: 180,
-        colorDark : '#000',
-        colorLight : '#fff',
-        correctLevel : QRCode.CorrectLevel.H
+        colorDark: "#000",
+        colorLight: "#fff",
+        correctLevel: QRCode.CorrectLevel.H,
       });
     </script>
     <!-- Desplegable de Idioma -->
