--- a/assets/css/_install.css
+++ b/assets/css/_install.css
@@ -15,17 +15,10 @@
 .nav-sections ol {
   padding-left: 1rem;
 }
-/* .nav-sections ol .item-mobile {
-  display: none;
-} */
-/* @media screen and (min-width: 992px) {
-  .nav-sections ol .item-mobile {
-    display: list-item;
-  }
-} */
 .section-qr {
   display: flex;
   justify-content: center;
+  padding: 2.75rem 1.5rem;
 }
 @media screen and (min-width: 992px) {
   .section-qr, .section-authcode {
@@ -36,14 +29,12 @@
     border-radius: 1rem;
     height: 100%;
   }
+  .section-qr {
+    padding: 1.5rem;
+  }
 }
 .section-authcode {
   margin-bottom: 1rem;
-}
-@media screen and (min-width: 992px) {
-  /* .section-authcode {
-    display: none;
-  } */
 }
 .section-authcode input {
   border: none;
@@ -70,5 +61,30 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 21.6px;
+  }
+}
+
+.ul-list-ozer {
+  list-style-type: none;
+  padding: 0;
+  margin: 1.5rem 0;
+}
+
+.ul-list-ozer li:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.li-list-ozer {
+  display: flex;
+}
+
+#qrcode img {
+  width: 162px;
+  height: 162px;
+}
+@media (min-width: 992px) {
+  #qrcode img {
+    width: 216px;
+    height: 216px;
   }
 }
