--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,8 +10,7 @@
 @import '_component_modal.css';
 @import '_component_tooltip.css';
 @import '_install.css';
-@import '_install-success.css';
 @import '_sections.css';
 @import '_config.css';
-@import '_contacts.css';
+@import '_contacts-groups.css';
 @import '_waitlist.css';
