--- a/views/waitlist/1-waitlist.html
+++ b/views/waitlist/1-waitlist.html
@@ -162,7 +162,7 @@
                       </p>
                     </div>
                     <div class="row mt-4">
-                      <div class="mb-3 col-4">
+                      <div class="mb-3 col-4 pe-custom-col">
                         <span class="waitlistForm__label">País *</span>
                         <div class="custom-select" id="codeCustomSelect">
                           <select id="codeSelect">
@@ -178,7 +178,7 @@
                           Tienes que completar este campo
                         </p>
                       </div>
-                      <div class="mb-3 col-8">
+                      <div class="mb-3 col-8 ps-0">
                         <label for="phoneInput" class="waitlistForm__label"
                           >Número de teléfono *</label
                         >
