--- a/assets/css/_waitlist.css
+++ b/assets/css/_waitlist.css
@@ -12,7 +12,9 @@
   font-size: var(--font-size-body-1);
   line-height: var(--line-height-body-1);
 }
-
+.pe-custom-col {
+  padding-right: 14px;
+}
 /* Select custom */
 .custom-select {
   position: static;
@@ -47,7 +49,7 @@
 }
 
 .select-selected:focus {
-  box-shadow: inset 0 0 0 0.125rem var(--btn-primary-color);
+  box-shadow: 0 0 0 0.125rem var(--btn-primary-border-focus);
   outline-color: transparent;
 }
 
@@ -76,7 +78,7 @@
 .select-items {
   position: absolute;
   background-color: var(--white);
-  box-shadow: inset 0 0 0 1px var(--border-primary-color);
+  box-shadow: 0 0 0 1px var(--border-primary-color);
   top: 35px;
   left: 50%;
   transform: translateX(-50%);
@@ -87,7 +89,9 @@
   font-size: var(--font-size-body-1);
   line-height: var(--line-height-body-1);
   padding: 1rem;
-  max-height: 300px;
+  max-height: 328px;
+  overflow-y: scroll;
+  margin-top: 0.5rem;
 }
 
 @media screen and (min-width: 992px) {
@@ -100,6 +104,9 @@
     transform: unset;
     z-index: 99;
     width: 140px;
+    max-height: 300px;
+    overflow-y: auto;
+    scrollbar-width: none;
   }
   .select-items div {
     padding: 0.75rem;
@@ -130,6 +137,9 @@ div.select-title {
   height: 1.5rem;
   width: 1.5rem;
 }
+div.select-title:hover {
+  background-color: var(--white);
+}
 @media screen and (min-width: 992px) {
   div.select-title {
     display: none;
@@ -138,10 +148,25 @@ div.select-title {
     padding: 0;
   }
 }
-.select-items div:hover,
+.select-items div:hover {
+  background-color: #f3f3f3;
+}
 .same-as-selected {
-  box-shadow: inset 0 0 0 0.125rem var(--btn-primary-border-focus);
+  background-color: #ececec;
+}
+.select-items div:nth-child(2):hover,
+.select-items div:nth-child(2).same-as-selected {
+  border-radius: 0.5rem 0.5rem 0 0;
+}
+.select-items div:last-child:hover,
+.select-items div:last-child.same-as-selected {
+  border-radius: 0 0 0.5rem 0.5rem;
+}
+.select-items div:focus,
+.select-items div:focus-visible {
+  box-shadow: 0 0 0 0.25rem var(--btn-primary-border-focus);
   border-radius: 0.5rem;
+  outline: none;
 }
 
 /* Estilos para el backdrop */
