fix: scroll bar

--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -75,7 +75,6 @@ body {
     max-width: 926px;
     padding: 0;
   }
-  
 }
 .br-lg-24 {
   border-radius: 1.5rem !important;
@@ -85,4 +84,24 @@ body {
 }
 .text-primary {
   color: var(--btn-primary-color) !important;
+}
+
+/* Scrollbar */
+/* width */
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 0.5rem;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #dcdde0;
+  border-radius: 0.5rem;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b8b9bc;
 }
