fix: install codigo, estilos de focus en waitlist

--- a/assets/css/_waitlist.css
+++ b/assets/css/_waitlist.css
@@ -135,6 +135,9 @@ div.select-title {
   height: 1.5rem;
   width: 1.5rem;
 }
+.select-title .btn-close:focus {
+  box-shadow: inset 0 0 0 0.25rem var(--btn-primary-border-focus);
+}
 div.select-title:hover {
   background-color: var(--white);
 }
@@ -162,9 +165,13 @@ div.select-title:hover {
 }
 .select-items div:focus,
 .select-items div:focus-visible {
-  box-shadow: 0 0 0 0.25rem var(--btn-primary-border-focus);
+  box-shadow: inset 0 0 0 0.25rem var(--btn-primary-border-focus);
   border-radius: 0.5rem;
   outline: none;
+}
+.select-items div:focus:hover,
+.select-items div:focus-visible:hover {
+  border-radius: 0.5rem;
 }
 
 /* Estilos para el backdrop */
