--- a/views/install/1-install-codigo.html
+++ b/views/install/1-install-codigo.html
@@ -132,19 +132,8 @@
         <div class="row install-section mb-5 mb-lg-0">
           <div class="col-12 col-lg-6 install-section__item">
             <div class="section-authcode">
-              <form action="">
-                <div class="px-lg-2">
-                  <label class="mb-2 d-block text-center" for="authcode"
-                    >Código de autenticación</label
-                  >
-                  <input
-                    type="text"
-                    id="authcode"
-                    name="authcode"
-                    placeholder="XXXX-XXXX"
-                  />
-                </div>
-              </form>
+              <span class="authcode_label">Código de autenticación</span>
+              <span class="authcode">2178 - 3201</span>
             </div>
           </div>
           <div class="col-12 col-lg-6 install-section__item">
