--- a/assets/css/_install.css
+++ b/assets/css/_install.css
@@ -20,8 +20,33 @@
   justify-content: center;
   padding: 2.75rem 1.5rem;
 }
+.section-authcode {
+  margin-bottom: 1rem;
+  background-color: var(--white);
+  border-radius: 1.5rem;
+  padding: 1rem;
+}
+.section-authcode .authcode {
+  display: inline-block;
+  border: none;
+  font-weight: 200;
+  font-size: 48px;
+  line-height: 57.6px;
+  width: 100%;
+  border-radius: 1rem;
+  text-align: center;
+  min-height: 58px;
+}
+.section-authcode .authcode_label {
+  display: block;
+  text-align: center;
+  font-weight: 400;
+  font-size: var(--font-size-body-2);
+  line-height: var(--line-height-body-2);
+}
 @media screen and (min-width: 992px) {
-  .section-qr, .section-authcode {
+  .section-qr,
+  .section-authcode {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,20 +57,21 @@
   .section-qr {
     padding: 1.5rem;
   }
-}
-.section-authcode {
-  margin-bottom: 1rem;
-}
-.section-authcode input {
-  border: none;
-  font-weight: 200;
-  font-size: 48px;
-  line-height: 57.6px;
-  width: 100%;
-  padding: 0.5rem 1rem;
-  border-radius: 1rem;
-  text-align: center;
-  min-height: 74px;
+  .section-authcode {
+    margin-bottom: 0;
+    min-height: 77px;
+    flex-direction: column;
+  }
+  .section-authcode .authcode {
+    min-height: 77px;
+    padding: 0;
+    line-height: 77px;
+  }
+  .section-authcode .authcode_label {
+    font-weight: 400;
+    font-size: var(--font-size-body-1);
+    line-height: var(--line-height-body-1);
+  }
 }
 
 .custom-loading-spacer {
