--- a/assets/css/_landing.css
+++ b/assets/css/_landing.css
@@ -9,6 +9,9 @@
   background-color: white;
 }
 @media screen and (max-width: 992px) {
+  .header-landing .navbar {
+    padding: 1.5rem 0;
+  }
   .navbar .offcanvas-container-top.bg-offcanvas {
     background-color: var(--bs-body-bg);
   }
