fix: images de seccion Home

--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -175,10 +175,31 @@
                 <a href="#" class="btn btn-lg btn-primary">Start now</a>
               </div>
               <div class="home-img">
+                <!-- Imagen mobile Inglés -->
                 <img
                   src="../../img/landing/home-mobile-en.svg"
                   alt="voice messages"
+                  class="d-lg-none"
                 />
+                <!-- Imagen desktop Inglés -->
+                <img
+                  src="../../img/landing/home-desktop-en.svg"
+                  alt="voice messages"
+                  class="d-none d-lg-block"
+                />
+                
+                <!-- Imagen mobile Español -->
+                <!-- <img
+                  src="../../img/landing/home-mobile-es.svg"
+                  alt="voice messages"
+                  class="d-lg-none"
+                /> -->
+                <!-- Imagen desktop Español -->
+                <!-- <img
+                  src="../../img/landing/home-desktop-es.svg"
+                  alt="voice messages"
+                  class="d-none d-lg-block"
+                /> -->
               </div>
             </div>
           </div>
