--- a/assets/css/_landing.css
+++ b/assets/css/_landing.css
@@ -85,6 +85,8 @@
   display: flex;
   flex-direction: column-reverse;
   max-width: 328px;
+  margin: 0 auto;
+  gap: 32px;
 }
 .section-home .home .home-text {
   display: flex;
@@ -105,7 +107,7 @@
     flex-direction: row;
     max-width: unset;
     justify-content: space-between;
-    gap: 32px;
+    align-items: center;
   }
   .section-home .home .home-text {
     max-width: 447px;
